@@ -2,80 +2,65 @@
 <!-- $Id$ -->
 <!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"  "http://tapestry.sourceforge.net/dtd/Tapestry_1_0.dtd">
 <specification>
-	<class>com.primix.tapestry.inspector.ShowInspector</class>
-	<allow-body>no</allow-body>
-	<parameters>
-		<allow-informal-parameters>no</allow-informal-parameters>
-		<parameter>
-			<name>enabled</name>
-		</parameter>
-		<parameter>
-			<name>image</name>
-			<java-type>com.primix.tapestry.IAsset</java-type>
-		</parameter>
-		<parameter>
-			<name>focus</name>
-			<java-type>com.primix.tapestry.IAsset</java-type>
-		</parameter>
-		<parameter>
-			<name>disabled</name>
-			<java-type>com.primix.tapestry.IAsset</java-type>
-		</parameter>
-	</parameters>
-	<components>
-		<component>
-			<id>link</id>
-			<type>Direct</type>
-			<bindings>
-				<binding>
-					<name>target</name>
-					<property-path>windowTarget</property-path>
-				</binding>
-				<binding>
-					<name>listener</name>
-					<property-path>listener</property-path>
-				</binding>
-				<inherited-binding>
-					<name>enabled</name>
-					<parameter-name>enabled</parameter-name>
-				</inherited-binding>
-			</bindings>
-		</component>
-		<component>
-			<id>button</id>
-			<type>Rollover</type>
-			<bindings>
-				<binding>
-					<name>image</name>
-					<property-path>image</property-path>
-				</binding>
-				<binding>
-					<name>focus</name>
-					<property-path>focus</property-path>
-				</binding>
-				<binding>
-					<name>disabled</name>
-					<property-path>disabled</property-path>
-				</binding>
-				<static-binding>
-					<name>alt</name>
-					<value>Show Inspector</value>
-				</static-binding>
-			</bindings>
-		</component>
-	</components>
-	<assets>
-		<private-asset>
-			<name>image</name>
-			<resource-path>/com/primix/tapestry/inspector/ShowInspector.gif</resource-path>
-		</private-asset>
-		<private-asset>
-			<name>focus</name>
-			<resource-path>/com/primix/tapestry/inspector/ShowInspector-focus.gif</resource-path>
-		</private-asset>
-		<private-asset>
-			<name>disabled</name>
-			<resource-path>/com/primix/tapestry/inspector/ShowInspector-disabled.gif</resource-path>
-		</private-asset>
-	</assets>
+  <class>com.primix.tapestry.inspector.ShowInspector</class>
+  <allow-body>no</allow-body>
+  <parameters>
+    <allow-informal-parameters>no</allow-informal-parameters>
+  </parameters>
+  <components>
+    <component>
+      <id>link</id>
+      <type>Direct</type>
+      <bindings>
+        <binding>
+          <name>target</name>
+          <property-path>windowTarget</property-path>
+        </binding>
+        <binding>
+          <name>listener</name>
+          <property-path>listener</property-path>
+        </binding>
+        <inherited-binding>
+          <name>enabled</name>
+          <parameter-name>enabled</parameter-name>
+        </inherited-binding>
+      </bindings>
+    </component>
+    <component>
+      <id>button</id>
+      <type>Rollover</type>
+      <bindings>
+        <binding>
+          <name>image</name>
+          <property-path>assets.image</property-path>
+        </binding>
+        <binding>
+          <name>focus</name>
+          <property-path>assets.focus</property-path>
+        </binding>
+        <static-binding>
+          <name>alt</name>
+          <value>Show Inspector</value>
+        </static-binding>
+        <static-binding>
+          <name>width</name>
+          <value>40</value>
+        </static-binding>
+        <static-binding>
+          <name>height</name>
+          <value>40</value>
+        </static-binding>
+      </bindings>
+    </component>
+  </components>
+  <assets>
+    <private-asset>
+      <name>image</name>
+      <resource-path>/com/primix/tapestry/inspector/ShowInspector.gif</resource-path>
+    </private-asset>
+    <private-asset>
+      <name>focus</name>
+      <resource-path>/com/primix/tapestry/inspector/ShowInspector-focus.gif</resource-path>
+    </private-asset>
+  </assets>
 </specification>
