@@ -11,7 +11,7 @@
 			<required>yes</required>
 		</parameter>
 		<parameter>
-			<name>enabled</name>
+			<name>disabled</name>
 		</parameter>
 		<parameter>
 			<name>scheme</name>
